[project]
name = "replacepartofimage"
description = "Replace part of an image with another image"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/LoveEatCandy/COMFYUI-ReplacePartOfImage"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "COMFYUI-ReplacePartOfImage"
Icon = ""
