[project]
name = "replace-part-of-image"
description = "Replace part of an image with another image"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/LoveEatCandy/COMFYUI-ReplacePartOfImage"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phy"
DisplayName = "COMFYUI-ReplacePartOfImage"
Icon = "https://avatars.githubusercontent.com/u/32889277"
